# chonky-disk

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  scanner.rs
src/components/: TopFiles.tsx
src/stores/: scan.ts
src/utils/: format.ts
